kubernetes/istio-demo/sec-ingress--terminate-tls-in-ingress-gateway.yaml
# Create namespace `inside-mesh` and enable automatic Istio sidecar
# injection for pods deployed in this namespace
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
  name: inside-mesh


# Create mesh-wide policy to allow only mutual TLS connections.
# Note that MeshPolicy is not namespaced resource
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: default
  namespace: inside-mesh
spec:
  host: "*.local" # any service running within cluster
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL


# Deploy httpbin service that implements REST API at port 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  namespace: inside-mesh
  labels:
    app: httpbin
spec:
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
      - name: httpbin
        image: httpbin
        imagePullPolicy: Never
        ports:
          - containerPort: 80


# Expose the REST API as a service
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: inside-mesh
  labels:
    app: httpbin
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: httpbin


# Configure gateway, which acts as a loadbalancer operating at the
# edge of mesh
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mygateway
  namespace: inside-mesh
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE  # terminate TLS in gateway but use only server authentication

      # istio-ingressgateway pod mounts a certificate and key from Secret
      # that was pre-provisioned in provisioning/prepare-demo.sh
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
      privateKey: /etc/istio/ingressgateway-certs/tls.key

    hosts:
    - "*"  # accept any incoming request, we do not require TLS SNI to be set


# Configure L7 HTTP URL based routing from gateway to the actual
# Service
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
  namespace: inside-mesh
spec:
  hosts:
  # route requests with "Host: host1.external.com" but drop other requests
  - "host1.external.com"

  # we can allow any Host header by using following:
  # - "*"

  gateways:
  - mygateway
  http:
  - route:
    - destination:
        host: httpbin  # interpreted as httpbin.inside-mesh.svc.cluster.local
