kubernetes/istio-demo/sec-ingress--use-ingress-gateway-for-service-outside-mesh.yaml
# Create namespace `inside-mesh` and enable automatic Istio sidecar
# injection for pods deployed in this namespace
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
  name: inside-mesh


# Create namespace `outside-mesh` for services outside the mesh
---
apiVersion: v1
kind: Namespace
metadata:
  name: outside-mesh


# Create mesh-wide policy to allow only mutual TLS connections.
# Note that MeshPolicy is not namespaced resource
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: default
  namespace: inside-mesh
spec:
  host: "*.local"  # limit to any hosts running within cluster
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL


# Disable Istio TLS for services outside mesh
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: httpbin
  namespace: outside-mesh
spec:
  host: "*.outside-mesh.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: DISABLE


# Deploy httpbin service outside mesh, expose REST API over HTTPS
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  namespace: outside-mesh
  labels:
    app: httpbin
spec:
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
      - name: httpbin
        image: httpbin
        imagePullPolicy: Never
        ports:
          - containerPort: 443
        volumeMounts:
        - mountPath: /run/secrets/certs/
          name: httpbin-certs
          readOnly: true
        command: ["/bin/sh"]
        # Configure Gunicorn HTTP server to terminate TLS
        #   - server certificate and key
        #   - require client certificate and validate against trusted CA cert
        #     (--cert-reqs 2 == ssl.CERT_REQUIRED)
        args: ["-c", "gunicorn -b 0.0.0.0:443 --access-logfile - --certfile /run/secrets/certs/httpbin.pem --keyfile /run/secrets/certs/httpbin-key.pem --cert-reqs 2 --ca-certs /run/secrets/certs/client-root.pem httpbin:app"]
      volumes:
      - name: httpbin-certs
        secret:
          secretName: httpbin-certs


# Deploy sshd service outside mesh, expose SSH protocol
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sshd
  namespace: outside-mesh
  labels:
    app: sshd
spec:
  selector:
    matchLabels:
      app: sshd
  template:
    metadata:
      labels:
        app: sshd
    spec:
      containers:
      - name: sshd
        image: sshd
        imagePullPolicy: Never
        ports:
          - containerPort: 22


# Expose the REST APIs as a services
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: outside-mesh
  labels:
    app: httpbin
spec:
  ports:
  - name: https
    port: 443
  selector:
    app: httpbin


# Expose the SSH as a service
---
apiVersion: v1
kind: Service
metadata:
  name: sshd
  namespace: outside-mesh
  labels:
    app: sshd
spec:
  ports:
  - port: 22
  selector:
    app: sshd


# Configure gateway, which acts as a loadbalancer operating at the
# edge of mesh
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mygateway
  namespace: outside-mesh
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: PASSTHROUGH
    hosts:
    - "*"
  - port:
      number: 2222  # use 2222 since 22 is already taken by the host OS
      protocol: TCP
      name: tcp
    hosts:
    - "*"

# Configure TLS SNI based routing from gateway to the actual Service
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
  namespace: outside-mesh
spec:
  hosts:
  - "httpbin.external.com"
  gateways:
  - mygateway
  tls:
  - match:
    - port: 443
      sniHosts:
      - "httpbin.external.com"
    route:
    - destination:
        host: httpbin # interpreted as httpbin.outside-mesh.svc.cluster.local
        port:
          number: 443


# Configure port based routing from gateway to the actual Service
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sshd
  namespace: outside-mesh
spec:
  hosts:
  - "*"
  gateways:
  - mygateway
  tcp:
  - match:
    - port: 2222
    route:
    - destination:
        host: "sshd"
        port:
          number: 22
