kubernetes/istio-demo/sec-mixed--client-outside-mesh-accesses-service-inside-mesh-no-tls.yaml
# Create namespace `inside-mesh` and enable automatic Istio sidecar
# injection for pods deployed in this namespace
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
  name: inside-mesh


# Create namespace `outside-mesh` for services outside the mesh
---
apiVersion: v1
kind: Namespace
metadata:
  name: outside-mesh


# Create mesh-wide policy to allow only mutual TLS connections
# Note that MeshPolicy is not namespaced resource
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: default
  namespace: inside-mesh
spec:
  host: "*.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL


# Deploy httpbin service that implements REST API at port 80 (HTTP)
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin-notls
  namespace: inside-mesh
  labels:
    app: httpbin
spec:
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
      - name: httpbin
        image: httpbin
        imagePullPolicy: Never
        ports:
          - containerPort: 80
        command: ["/bin/sh"]
        args: ["-c", "gunicorn -b 0.0.0.0:80 httpbin:app"]


# Expose the REST APIs as a services
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: inside-mesh
  labels:
    app: httpbin
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: httpbin


# Deploy client pod outside-mesh
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: outside-mesh
  labels:
    app: client
spec:
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: client
        imagePullPolicy: Never
        command: ["/bin/sleep"] # run sleep so that the pod will remain running and we can "exec" into it to run http client
        args: ["999999999"]


# Deploy client pod inside-mesh
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: inside-mesh
  labels:
    app: client
spec:
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: client
        imagePullPolicy: Never
        command: ["/bin/sleep"] # run sleep so that the pod will remain running and we can "exec" into it to run http client
        args: ["999999999"]
